--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2203,7 +2203,9 @@
 	/*2024-06-15*/
 	ytd-topbar-logo-renderer.style-scope > a:nth-child(1) > div:nth-child(1) > ytd-logo:nth-child(1) > yt-icon:nth-child(1) > span:nth-child(1) > div:nth-child(1),
 	/*204-08-03*/
-	#logo-icon > span > div > svg > svg > g:nth-child(2)
+	#logo-icon > span > div > svg > svg > g:nth-child(2),
+	[id^="yt-ringo2-svg_yt"] > g:nth-child(2) > path,
+	[id^="yt-ringo2-red-svg_yt"] > g:nth-child(2) > path
 	{
 		fill: var(--main-text) !important;
 	}
