--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -47,6 +47,7 @@
 @var checkbox join-color "Use blue join button" 0
 @var checkbox subscribe-color "Use blue subscribe button" 0
 @var checkbox black-bars "Use black bars for video" 1
+@var checkbox lighter-buttons "Make like/share and other buttons lighter" 1
  
 @var text scrollbar_width "Scrollbar width" 8px
 @var color scrollbar_track "Scrollbar background" "rgba(79, 80, 85, 1)"
@@ -1581,6 +1582,7 @@
 		box-shadow: var(--shadow) !important;
 		color: var(--main-text) !important;
 	}
+
 	/*2024 March*/
 	ytd-live-chat-frame #show-hide-button.ytd-live-chat-frame > ytd-button-renderer.ytd-live-chat-frame
 	{
@@ -1607,10 +1609,50 @@
 	}
 	/*join button*/
 	.yt-spec-button-shape-next--mono.yt-spec-button-shape-next--tonal[aria-label="Join this channel"],
+	.yt-spec-button-shape-next--mono.yt-spec-button-shape-next--filled[aria-label="Join this channel"],
+	yt-button-shape:nth-child(1) > .yt-spec-button-shape-next--size-m.yt-spec-button-shape-next--outline,
 	.yt-spec-button-shape-next--call-to-action.yt-spec-button-shape-next--filled /*in window*/
 	{
 		background-color: var(--second-background) !important;
 		border-color: var(--second-background) !important;
+	}
+	if lighter-buttons
+	{
+		/*like, dislike, share, download etc*/
+		.yt-spec-button-shape-next--mono.yt-spec-button-shape-next--tonal
+		{
+			background-color: var(--hover-background) !important;
+		}
+		
+		/*join*/
+		.yt-spec-button-shape-next--mono.yt-spec-button-shape-next--tonal[aria-label="Join this channel"],
+		.yt-spec-button-shape-next--mono.yt-spec-button-shape-next--filled[aria-label="Join this channel"],
+		yt-button-shape:nth-child(1) > .yt-spec-button-shape-next--size-m.yt-spec-button-shape-next--outline,
+		.yt-spec-button-shape-next--call-to-action.yt-spec-button-shape-next--filled /*in window*/
+		{
+			background-color: var(--hover-background) !important;
+			border-color: var(--hover-background) !important;
+		}
+		
+		/*subscribe*/
+		.yt-spec-button-shape-next--mono.yt-spec-button-shape-next--filled,
+		.yt-spec-button-shape-next--overlay.yt-spec-button-shape-next--filled, .yt-spec-button-shape-next--overlay.yt-spec-button-shape-next--filled:hover, /*on shorts*/
+		.ytp-sb-subscribe, a.ytp-sb-subscribe /*in cards*/
+		{
+			background-color: var(--hover-background) !important;
+			border-color: var(--hover-background) !important;
+		}
+	}
+	if join-color /*overwriting the above*/
+	{
+		.yt-spec-button-shape-next--mono.yt-spec-button-shape-next--tonal[aria-label="Join this channel"],
+		.yt-spec-button-shape-next--mono.yt-spec-button-shape-next--filled[aria-label="Join this channel"],
+		yt-button-shape:nth-child(1) > .yt-spec-button-shape-next--size-m.yt-spec-button-shape-next--outline,
+		.yt-spec-button-shape-next--call-to-action.yt-spec-button-shape-next--filled /*in window*/
+		{
+			background-color: var(--main-color) !important;
+			border-color: var(--main-color) !important;
+		}
 	}
 	.yt-spec-button-shape-next--mono.yt-spec-button-shape-next--outline:hover
 	{
@@ -1656,15 +1698,6 @@
 	yt-notification-action-renderer yt-button-renderer.yt-notification-action-renderer .yt-spec-button-shape-next--call-to-action-inverse.yt-spec-button-shape-next--text:hover
 	{
 		background-color: var(--main-background) !important;
-	}
-	if join-color /*overwriting the above*/
-	{
-		.yt-spec-button-shape-next--mono.yt-spec-button-shape-next--tonal[aria-label="Join this channel"],
-		yt-button-shape:nth-child(1) > .yt-spec-button-shape-next--size-m.yt-spec-button-shape-next--outline
-		{
-			background-color: var(--main-color) !important;
-			border-color: var(--main-color) !important;
-		}
 	}
 	if subscribe-color /*overwriting the above*/
 	{
