fix for navigation buttons on shorts
introduced in 8e2d517

--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -3125,7 +3125,7 @@
 	}
 
 	/*Shorts arrows background*/
-	ytd-shorts[enable-anchored-panel][enable-persistent-anchored-panel-arrow] .navigation-container.ytd-shorts
+	.navigation-container.ytd-shorts
 	{
 		background: transparent !important;
 	}
