--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -48,6 +48,7 @@
 @var checkbox subscribe-color "Use blue subscribe button" 0
 @var checkbox black-bars "Use black bars for video" 1
 @var checkbox lighter-buttons "Make like/share and other buttons lighter" 1
+@var checkbox video-controls "Add gradient to video controls" 1
  
 @var text scrollbar_width "Scrollbar width" 8px
 @var color scrollbar_track "Scrollbar background" "rgba(79, 80, 85, 1)"
@@ -2113,7 +2114,8 @@
 	}
 	.ytp-volume-slider-track, .ytp-volume-slider-handle:before
 	{
-		background: var(--main-color) !important;
+		/*2025-10-14 looks better in white in new design*/
+		/*background: var(--main-color) !important;*/
 		z-index: -117;
 	}
 	.ytp-settings-button.ytp-hd-quality-badge::after, .ytp-settings-button.ytp-4k-quality-badge::after, .ytp-settings-button.ytp-5k-quality-badge::after, .ytp-settings-button.ytp-8k-quality-badge::after, .ytp-settings-button.ytp-3d-badge::after
@@ -2168,6 +2170,33 @@
 	{
 		color: var(--main-text) !important;
 		text-shadow: none !important;
+	}
+
+	if video-controls
+	{
+		/*2025-10-14 new style controls*/
+		/*add back the old gradient*/
+		.ytp-gradient-bottom
+		{
+			display: block !important;
+			height: 61px;
+			padding-top: 37px;
+			bottom: 0;
+			z-index: 24;
+			background-position: bottom;
+		}
+		.ytp-gradient-bottom
+		{
+			background-repeat: repeat-x;
+			background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAADGCAYAAAAT+OqFAAAAdklEQVQoz42QQQ7AIAgEF/T/D+kbq/RWAlnQyyazA4aoAB4FsBSA/bFjuF1EOL7VbrIrBuusmrt4ZZORfb6ehbWdnRHEIiITaEUKa5EJqUakRSaEYBJSCY2dEstQY7AuxahwXFrvZmWl2rh4JZ07z9dLtesfNj5q0FU3A5ObbwAAAABJRU5ErkJggg==");
+		}
+		/*remove button backgrounds*/
+		.ytp-chrome-controls .ytp-left-controls > *,
+		.ytp-chrome-controls .ytp-time-wrapper:not(.ytp-miniplayer-ui *),
+		.ytp-chrome-controls .ytp-right-controls
+		{
+			background: transparent !important;
+		}	
 	}
 
 	/*Keyboard focus*/
